# family-medicine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  questions.json  reddit-post.md
app/: globals.css  layout.tsx  page.tsx
app/(admin)/: layout.tsx
app/(learn)/: layout.tsx  page.tsx
app/(manage)/: layout.tsx
app/bookmarks/: page.tsx
app/exam/: page.tsx
app/login/: page.tsx
app/review/: page.tsx
app/stats/: page.tsx
components/: QuestionCard.tsx  index.ts
components/admin/: StatsOverview.tsx  UserTable.tsx  index.ts
components/editor/: CardList.tsx  CardTypeSelector.tsx  index.ts
components/layouts/: AdminSidebar.tsx  AppShell.tsx  CategoryNav.tsx  Header.tsx  LearnSidebar.tsx  ManageSidebar.tsx  Sidebar.tsx  index.ts
components/questions/: ClozeQuestion.tsx  EMQQuestion.tsx  MCQQuestion.tsx  OptionButton.tsx  TrueFalseQuestion.tsx  WrittenQuestion.tsx  index.ts
components/sets/: JsonImporter.tsx  StudySetCard.tsx  StudySetForm.tsx  StudySetProvider.tsx  StudySetSelector.tsx  index.ts  (+1 more)
db/: index.ts  schema.ts
hooks/: index.ts  useKeyboardShortcuts.ts  useQuiz.ts  useUser.tsx
lib/: auth-email.ts  auth.ts  bookmarks.ts  card-utils.ts  db.ts  email.ts  session.ts  sounds.ts  spacedRepetition.ts  stats.ts  storage.ts  study-set-search.ts  utils.ts
prisma/: schema.prisma
scripts/: seed.ts
types/: questions.ts  studyCard.ts
which-failed/: Cargo.toml
which-failed/src/: main.rs
which-failed/which-failed-macro/: Cargo.toml
which-failed/which-failed-macro/src/: lib.rs
(+54 files in other folders)
